<resources>
    <string name="sign_in_with_twitter">Sign in with Twitter</string>
    <string name="sign_in_with_email">Sign in with Email</string>
    <string name="go4lunch" translatable="false">Go4Lunch</string>
    <string name="description_logo">Find a restaurant and invite your co-workers for lunch!</string>
    <string name="sign_in_with_facebook">Sign in with facebook</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="default_info_title" translatable="false">default marker title</string>
    <string name="default_info_snippet" translatable="false">default info snippet</string>
    <string name="title_activity_maps2" translatable="false">Map</string>
    <string name="camera_and_location_rationale">Ask Fine location permission</string>
    <string name="map_view">Map View</string>
    <string name="list_view">List View</string>
    <string name="workmates">Workmates</string>
    <string name="hungry">I\'m Hungry!</string>
    <string name="search">Search</string>
    <string name="menu" translatable="false">Menu</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="your_lunch">Your Lunch</string>
    <string name="title_activity_test" translatable="false">TestActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="restaurant_title" translatable="false">Restaurant title</string>
    <string name="restaurant_address" translatable="false">Restaurant address</string>
    <string name="restaurant_opening_time" translatable="false">Restaurant opening time</string>
    <string name="distance" translatable="false">Distance</string>
    <string name="_1" translatable="false">(1)</string>
    <string name="number_of_person" translatable="false">(%1$d)</string>
    <string name="login">Login</string>
    <string name="workmate_eating">%1$s is eating at %2$s</string>
    <string name="workmate_joining">%1$s is joining!</string>
    <string name="workmate_eating_empty">%1$s hasn\'t decided yet</string>
    <string name="call">CALL</string>
    <string name="like">LIKE</string>
    <string name="website">WEBSITE</string>
    <string name="channel_name" translatable="false">Eat Notification</string>
    <string name="channel_description" translatable="false">Channel of the eat Notification</string>
    <string name="notification" translatable="false">Notification</string>
    <string name="back">Back</string>
    <string name="no_restaurant_selected">No restaurant selected for lunch.</string>
    <string name="no_one_eating">No one will eat here.</string>
    <string name="will_eat_here">will eat here.</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="no_location_permission">Location permission are denied.Please turn it on.</string>

</resources>