<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_restaurant_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/item_restaurant_image"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        android:scaleType="fitXY"
        android:src="@drawable/restaurant_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_restaurant_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:text="@string/restaurant_title"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_restaurant_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginTop="@dimen/text_margin"
        android:text="@string/restaurant_address"
        android:textColor="@color/grey"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_restaurant_title"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/item_restaurant_open_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginTop="@dimen/text_margin"
        android:text="@string/restaurant_opening_time"
        android:textColor="@color/grey"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_restaurant_address"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/item_restaurant_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_marginEnd="20dp"
        android:text="@string/distance"
        android:textColor="@color/light_grey"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/item_restaurant_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_restaurant_number_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginEnd="@dimen/text_margin"
        android:text="@string/_1"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="11sp"
        android:drawableTint="@color/black"
        android:drawableStart="@drawable/person_outline_vector"
        app:layout_constraintEnd_toStartOf="@id/item_restaurant_image"
        app:layout_constraintTop_toBottomOf="@id/item_restaurant_distance"
        tools:ignore="SmallSp" />

    <RatingBar
        android:id="@+id/item_restaurant_rating_bar"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/text_margin"
        android:layout_marginBottom="@dimen/text_margin"
        android:isIndicator="true"
        android:numStars="3"
        android:progressTint="@color/yellow"
        android:secondaryProgressTint="@color/yellow"
        android:stepSize="0.1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/item_restaurant_image"
        app:layout_constraintTop_toBottomOf="@id/item_restaurant_number_person" />



</androidx.constraintlayout.widget.ConstraintLayout>