<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RestaurantDetailActivity">

    <ImageView
        android:id="@+id/restaurant_detail_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="fitXY"
        android:src="@drawable/com_facebook_profile_picture_blank_portrait"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/restaurant_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restaurant_detail_image">

        <TextView
            android:id="@+id/restaurant_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/restaurant_detail_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="30dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/restaurant_detail_name" />

        <RatingBar
            android:id="@+id/item_restaurant_rating_bar"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fab_margin"
            android:isIndicator="true"
            android:numStars="3"
            android:progressTint="@color/yellow"
            android:secondaryProgressTint="@color/yellow"
            android:stepSize="0.1"
            app:layout_constraintBottom_toBottomOf="@id/restaurant_detail_name"
            app:layout_constraintStart_toEndOf="@id/restaurant_detail_name"
            app:layout_constraintTop_toTopOf="@id/restaurant_detail_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/phone_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="@dimen/fab_margin"
        android:src="@drawable/vector_phone"
        android:tint="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restaurant_detail" />

    <TextView
        android:id="@+id/call_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/call"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@id/phone_button"
        app:layout_constraintStart_toStartOf="@id/phone_button"
        app:layout_constraintTop_toBottomOf="@id/phone_button" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/like_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/fab_margin"
        android:src="@drawable/star_vector"
        android:tint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restaurant_detail" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/like"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@id/like_button"
        app:layout_constraintStart_toStartOf="@id/like_button"
        app:layout_constraintTop_toBottomOf="@id/like_button" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/website_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_marginEnd="60dp"
        android:src="@drawable/world_vector"
        android:tint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restaurant_detail" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/website"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@id/website_button"
        app:layout_constraintStart_toStartOf="@id/website_button"
        app:layout_constraintTop_toBottomOf="@id/website_button" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@color/dark_white"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/call_text" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/workmatesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/linear_layout"
        tools:listitem="@layout/item_workmate" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_current_restaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/fab_margin"
        app:backgroundTint="@color/white"
        app:iconSize="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/restaurant_detail_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restaurant_detail_image"
        app:srcCompat="@drawable/check_circle_vector"
        app:tint="@color/green_light" />


</androidx.constraintlayout.widget.ConstraintLayout>